tests/baselines/reference/parserClassDeclaration19(strict=true).errors.txt
parserClassDeclaration19.ts(2,5): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.


==== parserClassDeclaration19.ts (1 errors) ====
    class C {
        foo();
        ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
        "foo"() { }
    }